# rust-theme-picker-tui

./: Cargo.toml  README.md  install.sh
.github/: dependabot.yml
.github/workflows/: quality-control.yml  release.yml  rust.yml
src/: main.rs
src/models/: hex_color.rs  mod.rs  rgba_color.rs  theme.rs
src/services/: mod.rs  theme.rs  theme_service.rs
src/services/themers/: btop.rs  gtk.rs  hypr.rs  kitty.rs  mod.rs  nvim.rs  waybar.rs
src/util/: theme.rs
src/utils/: paths.rs  symlink.rs
