[package]
name = "theme-picker"
description = "Terminal based theme picker"
license = "MIT"
repository = "https://github.com/FrederikNorlyk/rust-theme-picker-tui"
keywords = ["theme", "tui"]
categories = ["config"]
version = "1.4.0"
edition = "2024"

[[bin]]
name = "theme_picker"
path = "src/main.rs"

[[bin]]
name = "norlyk"
path = "src/bin/cli.rs"

[lints.clippy]
all = "deny"           # Fail the build instead of warn
pedantic = "deny"      # Pedantic lints also fail
correctness = "deny"   # Correctness issues
complexity = "deny"    # Overly complex code
perf = "deny"          # Performance anti-patterns
style = "deny"         # Style issues
suspicious = "deny"    # Suspicious patterns

[lints.rust]
unsafe_code = "deny"
unused = "deny"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
regex = "1.12.2"
rand = "0.10.0-rc.8"
clap = { version = "4.5.56", features = ["derive"] }
easy_color = "0.1.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.11"
